# backend/openapi.yaml
@@ -349,6 +349,12 @@ paths:
                   schema:
                     type: integer
                     format: int32
+                - name: tagIds
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
             responses:
                 "200":
                     description: OK
